--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.31.0",
     "@prisma/client": "^6.11.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -35,11 +36,14 @@
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
-    "eslint": "^9",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.3.5",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "prisma": "^6.11.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.37.0"
   }
 }
